# jumpcutter

./: .dockerignore  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
docker/: Dockerfile
jumpcutter/: .pylintrc  __main__.py  clip.py  pytest.ini  setup.cfg
jumpcutter/src/: clip.py
