[tool.poetry]
name = "jumpcutter"
version = "0.1.5"
description = "Jumpcut silent parts of your videos automagically"
authors = ["Kivanc Yuksel <emkademy@gmail.com>"]
license="MIT"
readme="README.md"
repository="https://github.com/kivancyuksel/jumpcutter.git"
classifiers= [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3.6",
    "Natural Language :: English",
    ]
packages = [
    { include = "jumpcutter" },
]

[tool.poetry.dependencies]
python = "^3.6"
moviepy = "~=1.0.3"
tqdm = "~=4.60.0"

[tool.poetry.dev-dependencies]
coverage = "~=5.3.0"
pytest = "~=6.2.0"
pytest-cov = "~=2.10.0"
pytest-xdist = "~=2.2.0"
pytest-sugar = "~=0.9.0"
pytest-mock = "~=3.4.0"
isort = "~=5.6.0"
pylama = "~=7.7.1"
pylama-pylint = "~=3.1.0"
radon = "~=4.3.0"
black = "==20.8b1"
mypy = ">=0.790"
boto3-stubs = "*"

[tool.poetry.plugins]
[tool.poetry.plugins."console_scripts"]
"jumpcutter" = "jumpcutter.__main__:main"

[build-system]
requires = ["setuptools","poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

